--- a/main.css
+++ b/main.css
@@ -570,6 +570,8 @@ p{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 30%;
+  max-height: 30%
 }
 
 /* Future Impact Section */
