--- a/main.css
+++ b/main.css
@@ -566,7 +566,39 @@ p{
 }
 
 /* The Science Behind the Breakthrough */
-.img {
+.1png {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 30%;
+  max-height: 30%
+}
+
+.2png {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 30%;
+  max-height: 30%
+}
+
+.3png {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 30%;
+  max-height: 30%
+}
+
+.4png {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 30%;
+  max-height: 30%
+}
+
+.5png {
   display: block;
   margin-left: auto;
   margin-right: auto;
