--- a/main.css
+++ b/main.css
@@ -566,7 +566,7 @@ p{
 }
 
 /* The Science Behind the Breakthrough */
-.1png {
+.1.png {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -574,7 +574,7 @@ p{
   max-height: 30%
 }
 
-.2png {
+.2.png {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -582,7 +582,7 @@ p{
   max-height: 30%
 }
 
-.3png {
+.3.png {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -590,7 +590,7 @@ p{
   max-height: 30%
 }
 
-.4png {
+.4.png {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -598,7 +598,7 @@ p{
   max-height: 30%
 }
 
-.5png {
+.5.png {
   display: block;
   margin-left: auto;
   margin-right: auto;
