--- a/main.css
+++ b/main.css
@@ -566,44 +566,17 @@ p{
 }
 
 /* The Science Behind the Breakthrough */
-.1.png {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 30%;
-  max-height: 30%
+.box img {
+    width: 50px;            
+    height: 50px;           
+    margin-bottom: 10px;    
+    border-radius: 50%;     
+    object-fit: cover;      
+    transition: transform 0.3s ease-in-out; 
 }
 
-.2.png {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 30%;
-  max-height: 30%
-}
-
-.3.png {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 30%;
-  max-height: 30%
-}
-
-.4png {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 30%;
-  max-height: 30%
-}
-
-.5png {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 30%;
-  max-height: 30%
+.box:hover img {
+    transform: scale(1.2);  
 }
 
 /* Future Impact Section */
