--- a/main.css
+++ b/main.css
@@ -199,84 +199,21 @@ body {
     color: #10232d;
     margin: 0;
 }
-.timeline-container {
-    width: 100%;
-    overflow-x: auto;
-    padding: 20px 0;
-}
-
-.timeline {
+.photo-container-crspr {
+    width: 100vw;
+    margin: 0 auto;
+    background-color: white;
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: flex-start;
-    gap: 50px;
-    position: relative;
-    padding-bottom: 40px;
 }
 
-.timeline::before {
-    content: '';
-    position: absolute;
-    bottom: 20px;
-    left: 0;
-    right: 0;
-    height: 4px;
-    background: #ccc;
-    z-index: 0;
+.photo-container-crspr img {
+    max-width: 100%;
+    height: auto;
+    background-color: white;
 }
 
-.event {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.circle {
-    width: 20px;
-    height: 20px;
-    background: #10232d;
-    border-radius: 50%;
-    position: relative;
-    z-index: 1;
-    border: 4px solid #fff;
-    box-shadow: 0 0 0 3px #10232d, 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.content {
-    background: #fff;
-    padding: 15px;
-    margin-top: 10px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 200px;
-     font-family: 'Poppins', sans-serif;
-    font-size: 14px;
-    color: #333;
-}
-
-.content h3 {
-    margin: 0 0 10px;
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-    color: #10232d;
-}
-
-@media (max-width: 768px) {
-    .timeline {
-        gap: 30px;
-    }
-
-    .content {
-        width: 150px;
-    }
-
-    .content h3 {
-        font-size: 14px;
-    }
-}
 
 .section-title {
     font-family: 'Poppins', sans-serif;
@@ -378,7 +315,7 @@ body {
 .page-entirety{
     width: 100%;
     height: 591.8px;
-    background-color: #0d1b2a;
+    background-color: #10232d;
     display: grid;
     grid-template-rows: repeat(28, 1fr);
     grid-template-columns: repeat(19, 1fr);
@@ -586,7 +523,7 @@ p{
 
 /* Future Impact Section */
 .crispr-future {
-    background-color: #07141a;
+    background-color: #10232d;
     background-size: cover;
     color: white;
     padding: 80px 0;
@@ -648,7 +585,7 @@ p{
 }
 
 .service-box {
-    background-color: #1c3d5a;
+    background-color: #187086;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
@@ -674,26 +611,36 @@ p{
 
 /* Future Summary Section */
 .future-summary-section {
-    background: url('summary-background.png') no-repeat center center;
+    background: url('summary-bg-3.png') no-repeat center center;
     background-size: cover;
     color: white;
-    padding: 60px 0;
-    text-align: center;
+    padding: 160px 70px 100px;
+    text-align: justify;
     font-family: 'Poppins', sans-serif;
 }
 
-.future-summary-box {
-    max-width: 800px;
-    margin: 0 auto;
-    background-color: rgba(13, 27, 42, 0.9);
-    padding: 40px;
-    border-radius: 15px;
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5); 
-}
 
 .future-summary {
     font-size: 20px; 
     line-height: 1.8;
-    font-weight: 500; 
+    font-weight: 400; 
     color: #e0e0e0; 
+}
+footer {
+    background-color: #10232d;
+    padding: 20px 0;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px;
+
+}
+
+.footer-container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.footer-info p {
+    margin: 5px 0;
+    color: #ffffff;
 }
